--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+  margin: 0;
+  padding: 0;
+}
+body{
+  background: #220138;
+  min-height: 100vh;
+  /* font-family: "Palanquin", sans-serif; */
+}
